cadastro de professores as turmas

--- a/Projeto3.0/Projeto3.0/MenuTurmas.resx
+++ b/Projeto3.0/Projeto3.0/MenuTurmas.resx
@@ -222,4 +222,25 @@
         AAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="cadastroToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAOVJREFUOE/F
+        klsOATEUhufB5QUrcFmHYDmI7YjEClxWIGItbgn2wBP/107TmU7Hm/iSLz0V50x7TpNfMJJb+ZAveZcb
+        OZBfqcilPMmxbMtquk7kWS4k/4tC8k42zK4Iv+8lRQpw7KMsS3Y05UUWrsOdOXbIO12zTOXahh4axl1D
+        YgW6ksbmoNs1GxpIDHXU5dOGHk7QsWGObKKjJ2829DBnRhUSKzCTKxt6hpL50+VvtORV9s0ugPky57Ii
+        JB/k3Owi8MIowpwZFT2hsXSdY/NlkktfooNHwpxpFNNh5c7RY/+bJPkAw8ouKgWHbO0AAAAASUVORK5C
+        YII=
+</value>
+  </data>
+  <data name="pesquisarToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAKVJREFUOE/V
+        kLENwjAQRV0GAtuEjgJRsBA9URiFFViBKHVSAguwAIIK3ufchXNEgRBPevK35bPPDt9mjFs84z2OFY5w
+        EBU3uMcZ5nHUvMbBQ3SzNr9D66VFH7VbWOyhTk4Wfa44tdhD6zeLPh2mOjha9Flj6g82Fn1W+EBt1o2T
+        OGp+wAxdFnhBHaJOWtSf6ON0c7J4jipevmYf8rtisUO9/a8I4Ql9gyBLzArk4AAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
