Versão do projeto entregue

--- a/Projeto3.0/Projeto3.0/MenuTurmas.resx
+++ b/Projeto3.0/Projeto3.0/MenuTurmas.resx
@@ -243,4 +243,7 @@
         OGp+wAxdFnhBHaJOWtSf6ON0c7J4jipevmYf8rtisUO9/a8I4Ql9gyBLzArk4AAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>59</value>
+  </metadata>
 </root>
